--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <header>
-    <h1>👋 admin-cxd</h1>
-    <p class="subtitle">Aspiring blockchain and web3 dev</p>
+    <h1 id="welcome">👋 admin-cxd</h1>
+    <p class="subtitle" id="subtitle"></p>
   </header>
 
-  <section class="about">
+  <section class="about animated">
     <ul>
       <li>🍫 I like chocolate ice cream</li>
       <li>🐧 I use Arch (btw) and Vim</li>
@@ -19,7 +19,7 @@
     </ul>
   </section>
 
-  <section class="skills">
+  <section class="skills animated">
     <h2>🛠️ Skills</h2>
     <div class="badges">
       <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white">
@@ -29,7 +29,7 @@
     </div>
   </section>
 
-  <section class="learning">
+  <section class="learning animated">
     <h2>📚 Currently Learning</h2>
     <div class="badges">
       <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black">
@@ -37,7 +37,7 @@
     </div>
   </section>
 
-  <section class="stats">
+  <section class="stats animated">
     <h2>📊 Stats</h2>
     <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=admin-cxd&layout=compact&theme=radical" alt="Top Languages">
     <p><img src="https://komarev.com/ghpvc/?username=admin-cxd&color=blue&style=flat-square" alt="Profile Views"></p>
@@ -46,6 +46,7 @@
   <footer>
     <p>⭐ Thanks for visiting my website!</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
-
