--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
   <section class="about animated">
     <ul>
-      <li>🍫 I like chocolate ice cream</li>
-      <li>🐧 I use Arch (btw) and Vim</li>
-      <li>💻 I like programming :3</li>
+      <li>I like chocolate ice cream</li>
+      <li>I use Arch (btw)</li>
+      <li>I like programming :3</li>
     </ul>
   </section>
 
   <section class="skills animated">
-    <h2>🛠️ Skills</h2>
+    <h2>🛠Skills</h2>
     <div class="badges">
       <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white">
       <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=cplusplus&logoColor=white">
@@ -30,7 +30,7 @@
   </section>
 
   <section class="learning animated">
-    <h2>📚 Currently Learning</h2>
+    <h2>Currently Learning</h2>
     <div class="badges">
       <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black">
       <img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB">
@@ -38,13 +38,13 @@
   </section>
 
   <section class="stats animated">
-    <h2>📊 Stats</h2>
+    <h2>Stats</h2>
     <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=admin-cxd&layout=compact&theme=radical" alt="Top Languages">
     <p><img src="https://komarev.com/ghpvc/?username=admin-cxd&color=blue&style=flat-square" alt="Profile Views"></p>
   </section>
 
   <footer>
-    <p>⭐ Thanks for visiting my website!</p>
+    <p>Thx 4 visiting</p>
   </footer>
 
   <script src="script.js"></script>
