--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>👋 admin-cxd</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1 id="welcome">👋 admin-cxd</h1>
-    <p class="subtitle" id="subtitle"></p>
-  </header>
+  <main>
+    <header>
+      <h1 id="welcome">👋 admin-cxd</h1>
+      <p class="subtitle" id="subtitle">Aspiring blockchain and web3 dev</p>
+    </header>
 
-  <section class="about animated">
-    <ul>
-      <li>I like chocolate ice cream</li>
-      <li>I use Arch (btw)</li>
-      <li>I like programming :3</li>
-    </ul>
-  </section>
+    <section class="about animated">
+      <ul>
+        <li>🍫 I like chocolate ice cream</li>
+        <li>🐧 I use Arch (btw) and Vim</li>
+        <li>💻 I like programming :3</li>
+      </ul>
+    </section>
 
-  <section class="skills animated">
-    <h2>🛠Skills</h2>
-    <div class="badges">
-      <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white">
-      <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=cplusplus&logoColor=white">
-      <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white">
-      <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white">
-    </div>
-  </section>
+    <section class="skills animated">
+      <h2>🛠️ Skills</h2>
+      <div class="badges">
+        <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python" />
+        <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=cplusplus&logoColor=white" alt="C++" />
+        <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5" />
+        <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3" />
+      </div>
+    </section>
 
-  <section class="learning animated">
-    <h2>Currently Learning</h2>
-    <div class="badges">
-      <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black">
-      <img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB">
-    </div>
-  </section>
+    <section class="learning animated">
+      <h2>📚 Currently Learning</h2>
+      <div class="badges">
+        <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" alt="JavaScript" />
+        <img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" alt="React" />
+      </div>
+    </section>
 
-  <section class="stats animated">
-    <h2>Stats</h2>
-    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=admin-cxd&layout=compact&theme=radical" alt="Top Languages">
-    <p><img src="https://komarev.com/ghpvc/?username=admin-cxd&color=blue&style=flat-square" alt="Profile Views"></p>
-  </section>
+    <section class="stats animated">
+      <h2>📊 Stats</h2>
+      <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=admin-cxd&layout=compact&theme=radical" alt="Top Languages" />
+      <p>
+        <img src="https://komarev.com/ghpvc/?username=admin-cxd&color=blue&style=flat-square" alt="Profile Views" />
+      </p>
+    </section>
 
-  <footer>
-    <p>Thx 4 visiting</p>
-  </footer>
-
+    <footer>
+      <p>⭐ Thanks for visiting my website!</p>
+    </footer>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
