--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <footer>
-      <p>⭐ Thanks for visiting my website!</p>
+      <p>Thx 4 visiting</p>
     </footer>
   </main>
   <script src="script.js"></script>
