--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <section class="about animated">
       <ul>
+        <h2>About</h2>
         <li>🍫 I like chocolate ice cream</li>
         <li>🐧 I use Arch (btw) and Vim</li>
         <li>💻 I like programming :3</li>
