--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <h2>About</h2>
         <li>🍫 I like chocolate ice cream</li>
-        <li>🐧 I use Arch (btw) and Vim</li>
+        <li>🐧 I use Arch (btw)</li>
         <li>💻 I like programming :3</li>
       </ul>
     </section>
